Comment out code that isn't quite compiling on Juqueen

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -20,7 +20,7 @@ endif
 #include applications/no_solver/Makefile.am
 
 # Test metric terms used for problems on manifolds
-include applications/metric/2d/all_mappings/Makefile.am
+# include applications/metric/2d/all_mappings/Makefile.am
 
 # Scalar advection on manifolds
 # include applications/advection/2d/swirl/Makefile.am
