(python/.ini) Minor updates

--- a/applications/geoclaw/chile2010/fclaw_options.ini
+++ b/applications/geoclaw/chile2010/fclaw_options.ini
@@ -40,14 +40,14 @@
      weighted_partition = T
 
 # File and console IO
-     verbosity = production     # verbose
+     verbosity = essential     # verbose
      serialout = T
 
 # Diagnostics and debugging
      trapfpe = F          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
      conservation-check = F
-     run-user-diagnostics = T
+     run-user-diagnostics = F
 
 # Equations and boundary conditions
      meqn = 3             # Number of equations
