--- a/applications/geoclaw/chile2010/fclaw_options.ini
+++ b/applications/geoclaw/chile2010/fclaw_options.ini
@@ -3,8 +3,8 @@
 [Options]
 
 # Grid dimensions
-     mx = 16		      # mx_leaf
-     my = 16              # my_leaf
+     mx = 32		      # mx_leaf
+     my = 32              # my_leaf
      mbc = 2              # Number of ghost cells
 
 # Ghost cells initialization
@@ -12,7 +12,7 @@
 
 # Regridding information
      minlevel = 1         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.01
      coarsen_threshold = 0.01
@@ -41,7 +41,7 @@
 
 # File and console IO
      verbosity = essential     # verbose
-     serialout = T
+     serialout = F
 
 # Diagnostics and debugging
      trapfpe = F          # Trap floating point errors.
