add geoclaw_topo_update to check whether topo is finalized or not before enter topo_update routine

--- a/src/solvers/fc2d_geoclaw/Makefile.am
+++ b/src/solvers/fc2d_geoclaw/Makefile.am
@@ -37,6 +37,7 @@ libgeoclaw_compiled_sources = \
 	src/solvers/fc2d_geoclaw/amrlib_source/check4nans.f90 \
 	src/solvers/fc2d_geoclaw/amrlib_source/quick_sort1.f \
 	src/solvers/fc2d_geoclaw/geolib_source/topointegral.f \
+	src/solvers/fc2d_geoclaw/geolib_source/geoclaw_topo_update.f \
 	src/solvers/fc2d_geoclaw/geolib_source/topo_update.f90 \
 	src/solvers/fc2d_geoclaw/geolib_source/bilinearintegral.f \
 	src/solvers/fc2d_geoclaw/geolib_source/geoclaw_bc2.f \
