(chile) Update to ini file

--- a/applications/geoclaw/chile2010/fclaw_options.ini
+++ b/applications/geoclaw/chile2010/fclaw_options.ini
@@ -49,6 +49,9 @@
      conservation-check = F
      run-user-diagnostics = F
 
+# Ghost packing options for parallel communication
+
+
 # Equations and boundary conditions
      meqn = 3             # Number of equations
      mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
@@ -81,3 +84,5 @@
      wave_tolerance_c = 1.e-1
      speed_tolerance_entries_c = 6
      speed_tolerance_c = 1e12 1e12 1e12 1e12 1e12 1e12
+
+     ghost_patch_pack_aux = T
