(chile/ini) Minor update

--- a/applications/geoclaw/chile2010/fclaw_options.ini
+++ b/applications/geoclaw/chile2010/fclaw_options.ini
@@ -36,8 +36,10 @@
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = F         # subcycle in time ( = T or F).
-     outstyle-uses-maxlevel = T
+
+     outstyle-uses-maxlevel = F   # Only has affect if outstyle == 3
      weighted_partition = T
+     advance-one-step = T
 
 # File and console IO
      verbosity = essential     # verbose
@@ -57,22 +59,17 @@
      mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
 # Mapping
-     manifold = F         # Manifold
 
-     # Domain dimensions - used only if manifold = F
+     # Domain dimensions
      ax = -120
      bx = -60
      ay = -60
      by = 0
 
-     mi = 1
-     mj = 1
-
-
 [geoclaw]
      order  = 2 2         # normal and transverse order
      mcapa = 2            # mcapa
-     maux = 3            # maux
+     maux = 3             # maux
      mbathy = 1           # mbathy
      src_term = 1         # src_term
 
@@ -85,4 +82,5 @@
      speed_tolerance_entries_c = 6
      speed_tolerance_c = 1e12 1e12 1e12 1e12 1e12 1e12
 
+# Parallel communication.  If we don't pack aux data, it will be recomputed
      ghost_patch_pack_aux = T
