(geoclaw/chile2010) update ini file

--- a/applications/geoclaw/chile2010/fclaw_options.ini
+++ b/applications/geoclaw/chile2010/fclaw_options.ini
@@ -37,7 +37,7 @@
 
      subcycle = F         # subcycle in time ( = T or F).
 
-     outstyle-uses-maxlevel = F   # Only has affect if outstyle == 3
+     outstyle-uses-maxlevel = T   # Only has affect if outstyle == 3
      weighted_partition = T
      advance-one-step = T
 
@@ -83,4 +83,4 @@
      speed_tolerance_c = 1e12 1e12 1e12 1e12 1e12 1e12
 
 # Parallel communication.  If we don't pack aux data, it will be recomputed
-     ghost_patch_pack_aux = T
+     ghost_patch_pack_aux = F
