--- a/applications/geoclaw/teton/fclaw_options.ini
+++ b/applications/geoclaw/teton/fclaw_options.ini
@@ -1,10 +1,10 @@
 [user]
-	example = 0
+	example = 1
 [Options]
 
 # Grid dimensions
-     mx = 8
-     my = 8
+     mx = 16
+     my = 16
      mbc = 2              # Number of ghost cells
 
 # Ghost cells initialization
@@ -12,7 +12,7 @@
 
 # Regridding information
      minlevel = 0
-     maxlevel = 4
+     maxlevel = 6
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.01
      coarsen_threshold = 0.005
@@ -20,29 +20,28 @@
      coarsen-delay = 0
 
 # Time stepping
-     tfinal = 3600.0         # Final time
+     tfinal = 10800         # Final time
 
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.2   # Initial time step for 'minlevel'
+     initial_dt = 10.0   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.8    # desired cfl
 
-     outstyle = 1         # 1 : Output steps  = tfinal/nout;
+     outstyle = 3         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
-     nout = 60            # Used for all three out styles;  has different meaning, though.
+     nout = 5            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = F         # subcycle in time ( = T or F).
 
      outstyle-uses-maxlevel = F   # Only has affect if outstyle == 3
-     weighted_partition = T
-     advance-one-step = T
+     advance-one-step = F
 
 # File and console IO
-     verbosity = essential     # verbose
-     serialout = F
+     verbosity = production     # verbose
+     serialout = T
 
 # Diagnostics and debugging
      trapfpe = F          # Trap floating point errors.
@@ -70,8 +69,8 @@
      by = 43.97790751
 
      # Aspect ratio : 2.85645927 (actual) vs. 2.83333 (approx)
-     mi = 17
-     mj = 6
+     mi = 2
+     mj = 1
 
 [geoclaw]
      order  = 2 2         # normal and transverse order
@@ -85,9 +84,9 @@
 
 # Coarsening
      dry_tolerance_c = 1.e-3
-     wave_tolerance_c = 1.e-1
+     wave_tolerance_c = 1.e-2
      speed_tolerance_entries_c = 6
      speed_tolerance_c = 1e12 1e12 1e12 1e12 1e12 1e12
 
 # Parallel communication.  If we don't pack aux data, it will be recomputed
-     ghost_patch_pack_aux = T
+     ghost_patch_pack_aux = F
