--- a/Makefile.apps
+++ b/Makefile.apps
@@ -60,4 +60,5 @@ include applications/geoclaw/bowl_radial/Makefile.am
 #include applications/geoclaw/bowl_slosh/Makefile.am
 #include applications/geoclaw/flat_bathymetry/Makefile.am
 include applications/geoclaw/chile2010/Makefile.am
+include applications/geoclaw/teton/Makefile.am
 endif
