(geoclaw/teton) Update to python and ini files

--- a/applications/geoclaw/teton/fclaw_options.ini
+++ b/applications/geoclaw/teton/fclaw_options.ini
@@ -12,7 +12,7 @@
 
 # Regridding information
      minlevel = 0
-     maxlevel = 6
+     maxlevel = 4
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.01
      coarsen_threshold = 0.005
@@ -47,7 +47,7 @@
      trapfpe = F          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
      conservation-check = F
-     run-user-diagnostics = F
+     run-user-diagnostics = T
 
 # Ghost packing options for parallel communication
 
