(geoclaw/teton) updates to .ini, .m, .py files

--- a/applications/geoclaw/teton/fclaw_options.ini
+++ b/applications/geoclaw/teton/fclaw_options.ini
@@ -3,8 +3,8 @@
 [Options]
 
 # Grid dimensions
-     mx = 16
-     my = 16
+     mx = 8
+     my = 8
      mbc = 2              # Number of ghost cells
 
 # Ghost cells initialization
@@ -12,15 +12,16 @@
 
 # Regridding information
      minlevel = 0
-     maxlevel = 4
+     maxlevel = 7
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.01
      coarsen_threshold = 0.005
-     smooth-refine = F
+     smooth-refine = T
+     smooth-level = 5
      coarsen-delay = 0
 
 # Time stepping
-     tfinal = 10800         # Final time
+     tfinal = 28800         # Final time
 
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 10.0   # Initial time step for 'minlevel'
@@ -31,7 +32,7 @@
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
-     nout = 60            # Used for all three out styles;  has different meaning, though.
+     nout = 160            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = F         # subcycle in time ( = T or F).
@@ -89,4 +90,5 @@
      speed_tolerance_c = 1e12 1e12 1e12 1e12 1e12 1e12
 
 # Parallel communication.  If we don't pack aux data, it will be recomputed
-     ghost_patch_pack_aux = F
+     ghost_patch_pack_aux = T
+     ghost_patch_pack_numextrafields = 3
