--- a/Makefile.apps
+++ b/Makefile.apps
@@ -24,7 +24,7 @@ endif
 
 # Scalar advection on manifolds
 include applications/advection/2d/swirl/Makefile.am
-include applications/advection/2d/torus/Makefile.am
+#include applications/advection/2d/torus/Makefile.am
 #include applications/advection/2d/torthem/Makefile.am
 include applications/advection/2d/annulus/Makefile.am
 #include applications/advection/2d/latlong/Makefile.am
@@ -59,5 +59,5 @@ if FCLAW_ENABLE_GEOCLAW
 include applications/geoclaw/bowl_radial/Makefile.am
 include applications/geoclaw/bowl_slosh/Makefile.am
 #include applications/geoclaw/flat_bathymetry/Makefile.am
-include applications/geoclaw/chile2010/Makefile.am
+#include applications/geoclaw/chile2010/Makefile.am
 endif
