(geoclaw/teton) Update qinit.f90 - more water in reservoir

--- a/applications/geoclaw/chile2010/Makefile
+++ b/applications/geoclaw/chile2010/Makefile
@@ -15,7 +15,7 @@ CLAW_PKG = geoclaw                  # Clawpack package to use
 EXE = chile2010                 # Executable to create
 SETRUN_FILE = setrun.py        # File containing function to make data
 OUTDIR = _output               # Directory for output
-SETPLOT_FILE = setplot.py      # File containing function to set plots
+SETPLOT_FILE = setplot_kml.py      # File containing function to set plots
 PLOTDIR = _plots               # Directory for plots
 
 RESTART = False
