--- a/applications/geoclaw/chile2010/fclaw_options.ini
+++ b/applications/geoclaw/chile2010/fclaw_options.ini
@@ -11,9 +11,9 @@
      init_ghostcell = F   # Initialize ghost cells
 
 # Regridding information
-     minlevel = 1         # Minimum level
+     minlevel = 0         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
-     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     regrid_interval = 4  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.01
      coarsen_threshold = 0.005
      smooth-refine = F
@@ -43,7 +43,7 @@
 
 # File and console IO
      verbosity = essential     # verbose
-     serialout = F
+     serialout = T
 
 # Diagnostics and debugging
      trapfpe = F          # Trap floating point errors.
