--- a/Makefile.apps
+++ b/Makefile.apps
@@ -25,7 +25,7 @@ endif
 # Scalar advection on manifolds
 include applications/advection/2d/swirl/Makefile.am
 #include applications/advection/2d/torus/Makefile.am
-#include applications/advection/2d/torthem/Makefile.am
+include applications/advection/2d/torthem/Makefile.am
 include applications/advection/2d/annulus/Makefile.am
 #include applications/advection/2d/latlong/Makefile.am
 #include applications/advection/2d/replicated/Makefile.am
