attempting to add option to package container in global

--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -9,13 +9,15 @@
 # -----------------------------------------------------------
 # Basic ForestClaw options
 # -----------------------------------------------------------
-[Options]
 
+[clawpatch]
 # Grid dimensions
      mx = 8               # Interior dimensions of each grid
-     my = 8		  #
+     my = 8		      #
      mbc = 2              # Number of ghost cells.
+     maux = 
 
+[Options]
 # Regridding options
      minlevel = 0               # Minimum level
      maxlevel = 5               # Maximum levels of refinement
