--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -3,10 +3,18 @@
      tperiod = 4.0
      claw-version = 4
 
+
+[clawpatch]
+# Grid dimensions
+     mx = 8		      # mx_leaf
+     my = 8               # my_leaf
+     mbc = 2              # Number of ghost cells
+     maux = 3
+
 [Options]
 
 # Grid dimensions
-     mx = 8		      # mx_leaf
+     mx = 8               # mx_leaf
      my = 8               # my_leaf
      mbc = 2              # Number of ghost cells
 
