attempting to make geoclaw solver work; add diag vtable def in to header file; setupgauges works now

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -1,11 +1,13 @@
 [user]
 	example = 0
+
 [Options]
 
 # Grid dimensions
      mx = 8		      # mx_leaf
      my = 8              # my_leaf
      mbc = 2              # Number of ghost cells
+     maux = 1
 
 # Ghost cells initialization
      init_ghostcell = F   # Initialize ghost cells
