--- a/Makefile.apps
+++ b/Makefile.apps
@@ -27,7 +27,7 @@ include applications/advection/2d/swirl/Makefile.am
 include applications/advection/2d/torus/Makefile.am
 #include applications/advection/2d/torthem/Makefile.am
 include applications/advection/2d/annulus/Makefile.am
-#include applications/advection/2d/filament/Makefile.am
+include applications/advection/2d/filament/Makefile.am
 #include applications/advection/2d/latlong/Makefile.am
 #include applications/advection/2d/replicated/Makefile.am
 #include applications/advection/2d/hemisphere/Makefile.am
