add src/patches/clawpatch into makefile

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -36,7 +36,6 @@ libforestclaw_installed_headers = \
 	src/fclaw2d_timeinterp.h \
 	src/fclaw2d_regrid.h \
 	src/fclaw2d_map_brick.h \
-	src/fclaw2d_vtk.h \
 	src/fclaw2d_partition.h \
 	src/fclaw2d_exchange.h \
 	src/fclaw2d_convenience.h \
@@ -45,11 +44,12 @@ libforestclaw_installed_headers = \
 	src/fclaw2d_map_query.h \
 	src/fclaw2d_map_query_defs.h \
 	src/fclaw2d_diagnostics.h \
-	src/fclaw2d_clawpatch.h \
-	src/fclaw2d_clawpatch.hpp \
-	src/fclaw2d_clawpatch_output_ascii.h \
-	src/fclaw2d_clawpatch_regrid.h \
-	src/fclaw2d_clawpatch_options.h
+	src/patches/clawpatch/fclaw2d_clawpatch.h \
+	src/patches/clawpatch/fclaw2d_clawpatch.hpp \
+	src/patches/clawpatch/fclaw2d_clawpatch_output_ascii.h \
+	src/patches/clawpatch/fclaw2d_clawpatch_regrid.h \
+	src/patches/clawpatch/fclaw2d_clawpatch_options.h \
+	src/patches/clawpatch/fclaw2d_vtk.h
 
 libforestclaw_internal_headers =
 
@@ -71,7 +71,6 @@ libforestclaw_compiled_sources = \
 	src/forestclaw2d.c \
 	src/fclaw2d_vtable.c \
 	src/fclaw2d_map.c \
-	src/fclaw2d_vtk.c \
 	src/fclaw2d_transform.c \
 	src/fclaw2d_map_query.c \
 	src/fclaw2d_map_brick.c \
@@ -97,11 +96,6 @@ libforestclaw_compiled_sources = \
 	src/fclaw2d_corner_neighbors.c \
 	src/fclaw2d_face_neighbors.c \
 	src/fclaw2d_farraybox.cpp \
-	src/fclaw2d_clawpatch.cpp \
-	src/fclaw2d_clawpatch_diagnostics.c \
-	src/fclaw2d_clawpatch_regrid.c \
-	src/fclaw2d_clawpatch_output_ascii.c \
-	src/fclaw2d_clawpatch_options.c \
 	src/mappings/context.f \
 	src/mappings/scale_rot_map.f \
 	src/mappings/map_query.f \
@@ -125,10 +119,18 @@ libforestclaw_compiled_sources = \
 	src/fortran_source2d/fclaw2d_metric_integrate_exact.f \
 	src/fortran_source2d/cellave2.f \
 	src/fortran_source2d/fdisc.f \
-	src/fortran_source2d/philim.f
+	src/fortran_source2d/philim.f \
+	src/patches/clawpatch/fclaw2d_clawpatch.cpp \
+	src/patches/clawpatch/fclaw2d_clawpatch_diagnostics.c \
+	src/patches/clawpatch/fclaw2d_clawpatch_regrid.c \
+	src/patches/clawpatch/fclaw2d_clawpatch_output_ascii.c \
+	src/patches/clawpatch/fclaw2d_clawpatch_options.c \
+	src/patches/clawpatch/fclaw2d_clawpatch_tikz.c \
+	src/patches/clawpatch/fclaw2d_clawpatch_vtk.c \
+	src/patches/clawpatch/fclaw2d_vtk.c
 
 # this variable is used for headers that are not publicly installed
-FCLAW_CPPFLAGS = -I@top_srcdir@/src -I@top_srcdir@/src/fortran_source2d
+FCLAW_CPPFLAGS = -I@top_srcdir@/src -I@top_srcdir@/src/fortran_source2d -I@top_srcdir@/src/patches/clawpatch
 FCLAW_FFLAGS = $(FCLAW_CPPFLAGS)
 
 lib_LTLIBRARIES += src/libforestclaw.la
