(annulus,filament,swirl,torus,bowl_radial) move mthbc to solver option in fclaw_options.ini

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -52,7 +52,6 @@
 
 # Equations and boundary conditions
      meqn = 3             # Number of equations
-     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
 # Mapping
      manifold = F         # Manifold
@@ -76,6 +75,7 @@
 
      mwaves = 3           # mwaves
      mthlim = 4 4 4       # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
 # Coarsening
      dry_tolerance_c = 1.e-3
