remove maux from geoclaw option, bowl_radial work

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -1,14 +1,16 @@
 [user]
 	example = 0
 
-[Options]
-
+[clawpatch]
 # Grid dimensions
-     mx = 8		      # mx_leaf
+     mx = 8               # mx_leaf
      my = 8              # my_leaf
      mbc = 2              # Number of ghost cells
      maux = 1
+# Equations and boundary conditions
+     meqn = 3             # Number of equations
 
+[Options]
 # Ghost cells initialization
      init_ghostcell = F   # Initialize ghost cells
 
@@ -50,9 +52,6 @@
      conservation-check = F
      run-user-diagnostics = T
 
-# Equations and boundary conditions
-     meqn = 3             # Number of equations
-
 # Mapping
      manifold = F         # Manifold
 
@@ -69,7 +68,6 @@
 [geoclaw]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
-     maux = 1             # maux
      mbathy = 1           # mbathy
      src_term = 1         # src_term
 
