modify regrid fortran routine for fc3d_clawpack5 solver

--- a/applications/advection/2.5d/swirl/fclaw_options.ini
+++ b/applications/advection/2.5d/swirl/fclaw_options.ini
@@ -53,6 +53,8 @@
      run-user-diagnostics = F
      compute-error = F
 
+     report-timing = F
+
 # Mapping
      manifold = F         # Manifold
 
