--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,6 @@
         url = https://github.com/cburstedde/p4est.git
 	# url = git@github.com:cburstedde/p4est.git
 	ignore = dirty
+[submodule "src/solvers/fc3d_ash3d"]
+	path = src/solvers/fc3d_ash3d
+	url = git@bitbucket.org:MelodyShih/fc3d_ash3d.git
