--- a/Makefile.apps
+++ b/Makefile.apps
@@ -12,6 +12,10 @@ if FCLAW_ENABLE_GEOCLAW
 include src/solvers/fc2d_geoclaw/Makefile.am
 endif
 
+if FCLAW_ENABLE_ASH3D
+include src/solvers/fc3d_ash3d/Makefile.am
+endif
+
 # ----------------------------------
 # Applications
 # ----------------------------------
@@ -64,4 +68,9 @@ include applications/geoclaw/bowl_radial/Makefile.am
 #include applications/geoclaw/bowl_slosh/Makefile.am
 #include applications/geoclaw/flat_bathymetry/Makefile.am
 #include applications/geoclaw/chile2010/Makefile.am
+endif
+
+# Ash3d examples
+if FCLAW_ENABLE_ASH3D
+include applications/ash3d/cloud_tester/Makefile.am
 endif
