--- a/Makefile.apps
+++ b/Makefile.apps
@@ -23,7 +23,7 @@ endif
 # include applications/metric/2d/all_mappings/Makefile.am
 
 # Scalar advection on manifolds
-#include applications/advection/2d/swirl/Makefile.am
+include applications/advection/2d/swirl/Makefile.am
 #include applications/advection/2d/torus/Makefile.am
 #include applications/advection/2d/torthem/Makefile.am
 #include applications/advection/2d/annulus/Makefile.am
@@ -46,19 +46,19 @@ endif
 # include applications/shallow/2d/sphere/Makefile.am
 
 # AMRClaw examples from Clawpack/AMRClaw
-#include applications/amrclaw/acoustics/2d/interface/Makefile.am
-#include applications/amrclaw/acoustics/2d/radial/Makefile.am
-#include applications/amrclaw/advection/2d/swirl/Makefile.am
-#include applications/amrclaw/burgers/2d/pwconst/Makefile.am
-#include applications/amrclaw/shallow/2d/radialdam/Makefile.am
-#include applications/amrclaw/euler/2d/quadrants/Makefile.am
-#include applications/amrclaw/euler/2d/shockbubble/Makefile.am
+include applications/amrclaw/acoustics/2d/interface/Makefile.am
+include applications/amrclaw/acoustics/2d/radial/Makefile.am
+include applications/amrclaw/advection/2d/swirl/Makefile.am
+include applications/amrclaw/burgers/2d/pwconst/Makefile.am
+include applications/amrclaw/shallow/2d/radialdam/Makefile.am
+include applications/amrclaw/euler/2d/quadrants/Makefile.am
+include applications/amrclaw/euler/2d/shockbubble/Makefile.am
 
 # GeoClaw examples
 if FCLAW_ENABLE_GEOCLAW
-#include applications/geoclaw/bowl_radial/Makefile.am
+include applications/geoclaw/bowl_radial/Makefile.am
 #include applications/geoclaw/bowl_slosh/Makefile.am
 #include applications/geoclaw/flat_bathymetry/Makefile.am
-#include applications/geoclaw/chile2010/Makefile.am
-# include applications/geoclaw/teton/Makefile.am
+include applications/geoclaw/chile2010/Makefile.am
+#include applications/geoclaw/teton/Makefile.am
 endif
