--- a/snippets/tst_f90_alloc/Makefile
+++ b/snippets/tst_f90_alloc/Makefile
@@ -1,7 +1,7 @@
 all:
-	gfortran -g -O2 -c array.f90 array_handling.f90 -std=f2008
+	gfortran -g -O2 -c array.f90 array_handling.f90
 	gcc -g -O2 -c prog.c
-	gcc -g -o tst_prog -O2 prog.o array.o -lgfortran
+	gcc -g -o tst_prog -O2 prog.o array.o array_handling.o -lgfortran
 
 clean:
 	rm -f *.o *~ *.mod tst_prog
