(swirl) Updating app to reflect new output style

--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -43,7 +43,7 @@
 
 # File and console IO
      verbosity = essential        # verbose
-     serialout = T
+     output = T
 
 # Diagnostics and debugging
      trapfpe = T                 # Trap floating point errors.
