(swirl) Update ini file; add python plotting routine

--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -2,6 +2,8 @@
      claw_version = 4         # Periodicity of the flow field.
      tperiod = 4.0
      claw-version = 4
+     ascii-out = T
+
 
 
 [clawpatch]
@@ -44,6 +46,10 @@
 # File and console IO
      verbosity = essential        # verbose
      output = T
+     tikz-out = T
+     tikz-figsize = 4 4 
+     tikz-plot-prefix = 'plot'
+     tikz-plot-suffix = 'png'
 
 # Diagnostics and debugging
      trapfpe = T                 # Trap floating point errors.
