(swirl) Python files; ini files

--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -46,7 +46,9 @@
 # File and console IO
      verbosity = essential        # verbose
      output = T
-     tikz-out = T
+
+# Tikz output     
+     tikz-out = F
      tikz-figsize = 4 4 
      tikz-plot-prefix = 'plot'
      tikz-plot-suffix = 'png'
