(swirl, ini, ipynb) Update notebook, ini files

--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -2,22 +2,23 @@
      claw_version = 4         # Periodicity of the flow field.
      tperiod = 4.0
      claw-version = 4
-     ascii-out = T
-
 
 
 [clawpatch]
-# Grid dimensions
+     # Grid dimensions
      mx = 8		      # mx_leaf
      my = 8               # my_leaf
      mbc = 2              # Number of ghost cells
      maux = 3
 
-# Equations and boundary conditions
+     # Equations and boundary conditions
      meqn = 1             # Number of equations
 
 [Options]
-# Dynamic gridding parameters
+     # ---------------------------
+     # Dynamic gridding parameters     
+     # ---------------------------
+
      minlevel = 2         # Minimum level
      maxlevel = 6         # Maximum levels of refinement
 
@@ -28,7 +29,9 @@
      smooth-refine = T
      refine-level = 5
 
-# Time stepping
+     # --------------
+     # Time stepping
+     # --------------
      tfinal = 4.0         #  Final time
 
      use_fixed_dt = F     # Take a fixed time step
@@ -43,24 +46,32 @@
 
      subcycle = T         # subcycle in time ( = T or F).
 
-# File and console IO
-     verbosity = essential        # verbose
+     # -------------------
+     # File and console IO
+     # -------------------
+     verbosity = essential        
      output = T
 
-# Tikz output 
+     # -----------
+     # Tikz output 
+     # -----------
      tikz-out = F
      tikz-figsize = 4 4 
      tikz-plot-prefix = 'plot'
      tikz-plot-suffix = 'png'
 
-# Diagnostics and debugging
+     # -------------------------
+     # Diagnostics and debugging
+     # -------------------------
      trapfpe = T                 # Trap floating point errors.
      mpi_debug = F               # Attach mpi processes in gdb
      conservation-check = F
      run-user-diagnostics = F
      compute-error = F
 
-# Mapping
+     # -------
+     # Mapping
+     # -------
      manifold = F         # Manifold
 
      # Domain dimensions - used only if manifold = F
@@ -80,6 +91,11 @@
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
      mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
+     # output
+     ascii-out = T
+     vtk-out = F
+
+
 [clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
@@ -89,3 +105,9 @@
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
      mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+     # output
+     ascii-out = T
+     vtk-out = F
+
+
