(bowl,py, ini) added Jupyter notebook, update options

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -2,19 +2,23 @@
 	example = 0
 
 [clawpatch]
-# Grid dimensions
+     # Grid dimensions
      mx = 8               # mx_leaf
      my = 8              # my_leaf
      mbc = 2              # Number of ghost cells
      maux = 1
-# Equations and boundary conditions
+
      meqn = 3             # Number of equations
 
+     # Advanced options
+     ghost_patch_pack_aux = false
+
+
 [Options]
-# Ghost cells initialization
+     # Ghost cells initialization
      init_ghostcell = F   # Initialize ghost cells
 
-# Regridding information
+     # Regridding information
      minlevel = 2         # Minimum level
      maxlevel = 7         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
@@ -23,7 +27,7 @@
      smooth-refine = F
      coarsen-delay = 0
 
-# Time stepping
+     # Time stepping
      tfinal = 8.0         # Final time
 
      use_fixed_dt = F     # Take a fixed time step
@@ -44,7 +48,7 @@
 
 # File and console IO
      verbosity = production     # verbose
-     serialout = T
+     output = T
 
 # Diagnostics and debugging
      trapfpe = F          # Trap floating point errors.
@@ -75,8 +79,12 @@
      mthlim = 4 4 4       # mthlim (is a vector in general, with 'mwaves' entries)
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
-# Coarsening
+     # Coarsening
      dry_tolerance_c = 1.e-3
      wave_tolerance_c = 1.e-2
      speed_tolerance_entries_c = 6
      speed_tolerance_c = 1000000000000.0 1000000000000.0 1000000000000.0 1000000000000.0 1000000000000.0 1000000000000.0
+
+     # Output
+     ascii-out = T
+
