--- a/Makefile.apps
+++ b/Makefile.apps
@@ -57,7 +57,7 @@ include applications/advection/2d/swirl/Makefile.am
 
 # GeoClaw examples
 if FCLAW_ENABLE_GEOCLAW
-#include applications/geoclaw/bowl_radial/Makefile.am
+include applications/geoclaw/bowl_radial/Makefile.am
 #include applications/geoclaw/bowl_slosh/Makefile.am
 #include applications/geoclaw/flat_bathymetry/Makefile.am
 #include applications/geoclaw/chile2010/Makefile.am
