--- a/Makefile.apps
+++ b/Makefile.apps
@@ -23,7 +23,7 @@ endif
 # include applications/metric/2d/all_mappings/Makefile.am
 
 # Scalar advection on manifolds
-#include applications/advection/2d/swirl/Makefile.am
+include applications/advection/2d/swirl/Makefile.am
 #include applications/advection/2d/torus/Makefile.am
 #include applications/advection/2d/torthem/Makefile.am
 #include applications/advection/2d/annulus/Makefile.am
