Fixed tikz output

--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -1,15 +1,20 @@
 [user]
      example = 0        # no mapping
-     claw-version = 4
+     claw-version = 5
+
+[clawpatch]
+     # Grid dimensions
+     mx = 8               # mx_leaf
+     my = 8               # my_leaf
+     mbc = 2              # Number of ghost cells
+     maux = 3
+
+     # Equations and boundary conditions
+     meqn = 1             # Number of equations
+
 
 [Options]
-# Grid dimensions
-     mx = 8
-     my = 8		# grid dimensions
-     mbc = 2            # number of ghost cells
-
-
-# Regridding optionsx
+# Regridding options
      minlevel = 3         # Minimum level
      maxlevel = 6         # Maximum levels of refinement
 
@@ -34,10 +39,6 @@
 
      subcycle = T       # subcycle in time ( = T or F).
 
-# Equation info
-     meqn = 1             # meqn
-
-
 # Diagnostics and debugging
      conservation-check = F
      run-user-diagnostics = F
@@ -46,10 +47,15 @@
 
 # File and console IO
      verbosity = essential    # verbosity
-     serialout = T            # Works with Matlab
-     vtkout = 0               # Read into VisIt
-     tikzout = F
-     tikz_figsize = 4 4
+     output = T
+
+     # -----------
+     # Tikz output 
+     # -----------
+     tikz-out = T
+     tikz-figsize = 4 4 
+     tikz-plot-prefix = 'plot'
+     tikz-plot-suffix = 'png'
 
 # mapping options
      manifold = F
@@ -70,6 +76,11 @@
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
+     # output
+     ascii-out = T
+     vtk-out = F
+
+
 [clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
@@ -79,3 +90,8 @@
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T
+     vtk-out = F
+     
