(filament) Add new options to ini file;  add python script for plotting

--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -53,7 +53,7 @@
      # Tikz output 
      # -----------
      tikz-out = T
-     tikz-figsize = 4 4 
+     tikz-figsize = 4 4     # Only used to compute DPI
      tikz-plot-prefix = 'plot'
      tikz-plot-suffix = 'png'
 
