--- a/applications/advection/2d/filament/example1_cart.ini
+++ b/applications/advection/2d/filament/example1_cart.ini
@@ -1,16 +1,12 @@
 [user]
-     example = 1       # Cartesian grid  (brick + cart)
+     example = 1       # Disk grid  (pillow disk)
 
 [Options]
-     mx = 8
-     my = 8
-     mbc = 2
-
-     minlevel = 2         # Minimum level
-     maxlevel = 5	  # Maximum levels of refinement
+     minlevel = 0         # Minimum level
+     maxlevel = 4	  # Maximum levels of refinement
 
      smooth-refine = T
-     smooth-level = 4
+     smooth-level = 2
 
 
 # mapping options
@@ -18,8 +14,8 @@
 
      shift = 1 1 0     # Cartesian grid is in [-1,1]x[-1,1] so we shift to [0,2]x[0,2]
 
-     mi = 2            # Brick dimensions (used in Cartesian mapping)
-     mj = 2
+     mi = 4            # Brick dimensions (used in Cartesian mapping)
+     mj = 4
 
 [clawpack46]
      mcapa = 1            # mcapa
