--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -52,7 +52,7 @@
      # -----------
      # Tikz output 
      # -----------
-     tikz-out = T
+     tikz-out = F
      tikz-figsize = 4 4     # Only used to compute DPI
      tikz-plot-prefix = 'plot'
      tikz-plot-suffix = 'png'
