(latlong) Update with global object, and new header style

--- a/applications/advection/2d/latlong/fclaw_options.ini
+++ b/applications/advection/2d/latlong/fclaw_options.ini
@@ -10,12 +10,17 @@
 # -----------------------------------------------------------
 # Basic ForestClaw options
 # -----------------------------------------------------------
-[Options]
+[clawpatch]
+     # Grid dimensions
+     mx = 8               # mx_leaf
+     my = 8               # my_leaf
+     mbc = 2              # Number of ghost cells
+     maux = 3
 
-# Grid dimensions
-     mx = 8               # Interior dimensions of each grid
-     my = 8		  #
-     mbc = 2              # Number of ghost cells.
+     # Number of equations 
+     meqn = 1             # Number of equations
+
+[Options]
 
 # Regridding options
      minlevel = 0               # Minimum level
@@ -41,12 +46,6 @@
 
      subcycle =  T        # subcycle in time ( = T or F).
 
-# Equation and boundary conditions
-     meqn = 1             # meqn
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
-
-     ghost_patch_pack_area = T
-
 # Diagnostics and debugging
      conservation-check = F
      run-user-diagnostics = F
@@ -54,9 +53,8 @@
      mpi_debug = F
 
 # File and console IO
-
      verbosity = essential        # verbose
-     serialout = T
+     output = T
 
 # mapping
     manifold = T
@@ -76,6 +74,11 @@
 
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T        # fort.qXXXX, fort.tXXXX
+     vtk-out = F
 
 
 [clawpack5]
@@ -87,3 +90,10 @@
 
      mwaves = 1           # mwaves
      mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+
+     # output
+     ascii-out = T        # fort.qXXXX, fort.tXXXX
+     vtk-out = F
+
+
